--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
 :root {
-	--dark-color-a: #667aff;
-	--dark-color-b: #7386ff;
-	--light-color: #e6e9ff;
+	--dark-color-b: #00bbf0;
+	--dark-color-a: #005792;
+	--light-color: #d9faff;
 	--success-color: #5cb85c;
 	--error-color: #d9534f;
 }
@@ -186,4 +186,8 @@ a {
 	.chat-sidebar {
 		display: none;
 	}
+}
+
+.ficon {
+	padding-right: 10px;
 }
